<resources>
    <string name="app_name">Supreme Car Wash</string>
    <string name="bnv_inicio">Inicio</string>
    <string name="bnv_citas">Citas</string>
    <string name="bnv_perfil">Perfil</string>
    <string name="bnv_servicio">Servicio</string>
    <string name="btnlogin">Iniciar sesión</string>
    <string name="titulo1">Supreme</string>
    <string name="titulo2">Car</string>
    <string name="titulo3">Wash</string>
    <string name="nologin">Si no tienes cuenta, regístrate</string>

</resources>