<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:background="@drawable/fondo3">

    <TextView
        android:id="@+id/titulo1"
        android:layout_width="0dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/pacifico"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="center"
        android:text="@string/titulo1"
        android:textColor="@color/white"
        android:textSize="45sp"/>
    <TextView
        android:id="@+id/titulo2"
        android:layout_width="0dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/pacifico"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/titulo1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="center"
        android:text="@string/titulo2"
        android:textColor="@color/white"
        android:textSize="45sp"/>
    <TextView
        android:id="@+id/titulo3"
        android:layout_width="0dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pacifico"
        app:layout_constraintTop_toBottomOf="@id/titulo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="center"
        android:text="@string/titulo3"
        android:textColor="@color/white"
        android:textSize="45sp"/>
    <!--ImageView
        android:id="@+id/fotologin"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titulo3"
        android:layout_marginTop="10dp"
        android:src="@drawable/supreme2"/> -->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#A21919"
        android:text="@string/btnlogin"
        android:gravity="center_horizontal"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="310dp"
        android:textSize="20sp"
        android:fontFamily="@font/pacifico"
       app:layout_constraintTop_toBottomOf="@id/titulo3"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/nologin"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@id/btnLogin"
        app:layout_constraintEnd_toEndOf="@id/btnLogin"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/white"
        android:fontFamily="@font/pacifico"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        android:textSize="20sp"/>


</androidx.constraintlayout.widget.ConstraintLayout>